--- a/examples/example.html
+++ b/examples/example.html
@@ -91,7 +91,7 @@
 </head>
 <body>
 <div class="container">
-  <h2>Upload and Display Image</h2>
+  <h2>欢迎使用在线图片编辑器</h2>
   <div class="button-group">
     <div class="file-input">
       <label for="imageInput">选择图片</label>
